# gourd-package

./: README.md
gourd/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.note  NAMESPACE  NEWS  justfile
gourd/R/: CRPPartition.R  CenteredPartition.R  FixedPartition.R  JensenLiuPartition.R  LocationScalePartition.R  RI.R  ShrinkagePartition.R  UniformPartition.R  internal-utils.R  mkDistrPtr.R  prPartition.R  rmvnorm.R  roxido.R  samplePartition.R  state.R  summarize_prior_on_shrinakge_and_grit.R  useDynLib.R
gourd/inst/: AUTHORS
gourd/man/: CRPPartition.Rd  CenteredPartition.Rd  FixedPartition.Rd  JensenLiuPartition.Rd  LocationScalePartition.Rd  ShrinkagePartition.Rd  UniformPartition.Rd  gourd-package.Rd  mkDistrPtr.Rd  prPartition.Rd  samplePartition.Rd  summarize_prior_on_shrinkage_and_grit.Rd
gourd/man/examples/: CRPPartition.R  CenteredPartition.R  FixedPartition.R  JensenLiuPartition.R  LocationScalePartition.R  ShrinkagePartition.R  UniformPartition.R  prPartition.R
gourd/src/: shim.c
gourd/src/rust/: Cargo.toml  vendor.tar.xz
gourd/src/rust/roxido/src/: lib.rs  r.rs
gourd/src/rust/roxido_macro/src/: lib.rs
gourd/src/rust/src/: data.rs  hyperparameters.rs  lib.rs  membership.rs  monitor.rs  mvnorm.rs  registration.rs  rows.rs  state.rs
gourd/tools/: cargo_run.R  registration.R
squash/: .Rhistory  DESCRIPTION  NAMESPACE
squash/.Rproj.user/7A97B377/: cpp-compilation-config  cpp-definition-cache  persistent-state
squash/.Rproj.user/7A97B377/pcs/: files-pane.pper  windowlayoutstate.pper
squash/.Rproj.user/7A97B377/sources/per/t/: D09389D7  D09389D7-contents
squash/.Rproj.user/7A97B377/sources/prop/: INDEX
squash/R/: state.R  useDynLib.R
squash/man/: convolve2.Rd  myrnorm.Rd  zero.Rd
squash/src/: shim.c
squash/src/rust/: .gitignore  Cargo.toml  vendor.tar.xz
squash/src/rust/.cargo/: config.toml
squash/src/rust/roxido/src/: r.rs
squash/src/rust/src/: data.rs  hyperparameters.rs  lib.rs  mvnorm.rs  registration.rs  state.rs
squash/tools/: configure.R  registration.R
