[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
roxido = { path="roxido" }
dahl-randompartition = { git="https://github.com/dbdahl/rust-dahl-randompartition.git", rev="ceecd2e" }
# dahl-randompartition = { path="/home/dahl/docs/devel/rust-dahl-randompartition" }
nalgebra = "0.32.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
num-traits = "0.2.15"