[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1

[dependencies]
rayon = "1.7.0"
roxido = { path="roxido" }
dahl-randompartition = { git="https://github.com/dbdahl/rust-dahl-randompartition.git", rev="f97de48" }
# dahl-randompartition = { path="/home/dahl/docs/devel/rust-dahl-randompartition" }
walltime = { git="https://github.com/dbdahl/rust-dahl-walltime.git", rev="030fad7" }
slice_sampler = { git="https://github.com/dbdahl/rust_slice_sampler.git", rev="bacf2b5" }
nalgebra = "0.32.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
num-traits = "0.2.15"
statrs = "0.16.0"
fastrand = "2.0.0"
