[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.67.1"

[lib]
crate-type = ["staticlib"]

# To convert stop!() to panic!(), set RUST_BACKTRACE=1 environment variable.
[profile.release]
debug = 1
lto = "thin"

[dependencies]
num_cpus = "1.13.1"
crossbeam = "0.8.1"
rayon = "1.7.0"
roxido = { path="roxido" }
dahl-randompartition = { git="https://github.com/dbdahl/rust-dahl-randompartition.git", rev="3e6c9c59548d" }
# dahl-randompartition = { path="/home/dahl/docs/devel/rust-dahl-randompartition" }
walltime = { git="https://github.com/dbdahl/rust-dahl-walltime.git", rev="df99ae9" }
slice_sampler = { git="https://github.com/dbdahl/rust_slice_sampler.git", rev="bacf2b5" }
nalgebra = "0.33.0"
rand = "0.9.0"
rand_distr = "0.5.0"
rand_pcg = "0.9.0"
num-traits = "0.2.15"
statrs = "0.18.0"
fastrand = "2.0.0"

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
